2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Change some function signatures for consistency.

	* libepc/consumer.c, libepc/consumer.h: Change return
	type of epc_consumer_lookup from "gchar*" to "gpointer".
	* libepc/contents.c, libepc/contents.h: Change data argument type
	from "const gpointer" to "gconstpointer" for epc_contents_new_dup.
	Move length argument behind data for consistency.
	* libepc/publisher.c, libepc/publisher.h: Rename value argument to
	data and change its type from "const gchar*" to "gconstpointer"
	for consistency.
	* examples/simple-publisher.c: Change order of length and
	data argument when using epc_contents_new.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Improve memory handling of EpcContents.

	* libepc/contents.c, libepc/contents.h: Add destroy_data argument to
	epc_contents_new. Add new epc_contents_new_dup function.
	* libepc/publisher.c, examples/simple-publisher.c: Pass g_free
	as destroy_data argument to epc_contents_new.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Implement streaming capabilities.

	* Makefile.am: Add libepc/contents.c and libepc/contents.h.
	* libepc/contents.c, libepc/contents.h: Move EpcContents buffer
	into separate files. Add EpcContentsReadFunc, epc_contents_get_data,
	epc_contents_get_mime_type, epc_contents_stream_new,
	epc_contents_stream_read and epc_contents_is_stream.
	* libepc/publisher.c, libepc/publisher.h: Remove EpcContents.
	Implement streaming of large objects.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-22  Murray Cumming,  <murrayc@murrayc.com>

	* examples/consumer-ui.c: (keys_combo_changed_cb), (main):
	Initialize and free GErrors.

2007-11-22  Murray Cumming  <murrayc@murrayc.com>

	* examples/consumer-ui.c: (main): Rename the transport 
	variable to service_type because that is what it is.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>
