@@ -270,3 +270,21 @@ EPC_IS_PROGRESS_WINDOW_CLASS
 EPC_TYPE_PROGRESS_WINDOW
 epc_progress_window_get_type
 </SECTION>
+
+<SECTION>
+<FILE>service-monitor</FILE>
+EpcServiceMonitorClass
+EpcServiceMonitorPrivate
+<TITLE>EpcServiceMonitor</TITLE>
+EpcServiceMonitor
+epc_service_monitor_new
+epc_service_monitor_new_for_application
+<SUBSECTION Standard>
+epc_service_monitor_get_type
+EPC_IS_SERVICE_MONITOR
+EPC_IS_SERVICE_MONITOR_CLASS
+EPC_SERVICE_MONITOR
+EPC_SERVICE_MONITOR_CLASS
+EPC_SERVICE_MONITOR_GET_CLASS
+EPC_TYPE_SERVICE_MONITOR
+</SECTION>
