@@ -1,2 +1,3 @@
-NONE:ENUM,STRING,UINT
+VOID:ENUM,STRING,UINT
 BOOLEAN:STRING
+VOID:STRING,STRING,STRING,UINT
